.k8/yamls-stage/ssv-node-10-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-10-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-10
spec:
  type: ClusterIP
  ports:
    - port: 12010
      protocol: UDP
      targetPort: 12010
      name: port-12010
    - port: 13010
      protocol: TCP
      targetPort: 13010
      name: port-13010
    - port: 15010
      protocol: TCP
      targetPort: 15010
      name: port-15010
  selector:
    app: ssv-node-10
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: ssv-node-10
  name: ssv-node-10
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-10
  template:
    metadata:
      labels:
        app: ssv-node-10
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-10
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT            
        command: ["make", "start-node"]
        ports:
        - containerPort: 12010
          name: port-12010
          protocol: UDP
          hostPort: 12010            
        - containerPort: 13010
          name: port-13010
          hostPort: 13010
        - containerPort: 15010
          name: port-15010
          hostPort: 15010
        volumeMounts:
        - mountPath: /data
          name: ssv-node-10
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-10
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-10
        persistentVolumeClaim:
          claimName: ssv-node-10
      - name: ssv-cm-validator-options-10
        configMap:
          name: ssv-cm-validator-options-10
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
