.k8/yamls-stage/ssv-node-11-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-11-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-11
spec:
  type: ClusterIP
  ports:
    - port: 12011
      protocol: UDP
      targetPort: 12011
      name: port-12011
    - port: 13011
      protocol: TCP
      targetPort: 13011
      name: port-13011
    - port: 15011
      protocol: TCP
      targetPort: 15011
      name: port-15011
  selector:
    app: ssv-node-11
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: ssv-node-11
  name: ssv-node-11
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-11
  template:
    metadata:
      labels:
        app: ssv-node-11
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-11
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT            
        command: ["make", "start-node"]
        ports:
        - containerPort: 12011
          name: port-12011
          protocol: UDP
          hostPort: 12011            
        - containerPort: 13011
          name: port-13011
          hostPort: 13011
        - containerPort: 15011
          name: port-15011
          hostPort: 15011
        volumeMounts:
        - mountPath: /data
          name: ssv-node-11
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-11
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-11
        persistentVolumeClaim:
          claimName: ssv-node-11
      - name: ssv-cm-validator-options-11
        configMap:
          name: ssv-cm-validator-options-11
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
