.k8/yamls-stage/ssv-node-12-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-12-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-12
spec:
  type: ClusterIP
  ports:
    - port: 12012
      protocol: UDP
      targetPort: 12012
      name: port-12012
    - port: 13012
      protocol: TCP
      targetPort: 13012
      name: port-13012
    - port: 15012
      protocol: TCP
      targetPort: 15012
      name: port-15012
  selector:
    app: ssv-node-12
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-12
  name: ssv-node-12
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-12
  template:
    metadata:
      labels:
        app: ssv-node-12
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-12
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12012
          name: port-12012
          protocol: UDP
          hostPort: 12012
        - containerPort: 13012
          name: port-13012
          hostPort: 13012
        - containerPort: 15012
          name: port-15012
          hostPort: 15012
        volumeMounts:
        - mountPath: /data
          name: ssv-node-12
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-12
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-12
        persistentVolumeClaim:
          claimName: ssv-node-12
      - name: ssv-cm-validator-options-12
        configMap:
          name: ssv-cm-validator-options-12
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
