.k8/yamls-stage/ssv-node-v2-4-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-4-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-4
spec:
  type: ClusterIP
  ports:
    - port: 12004
      protocol: UDP
      targetPort: 12004
      name: port-12004
    - port: 13004
      protocol: TCP
      targetPort: 13004
      name: port-13004
    - port: 15004
      protocol: TCP
      targetPort: 15004
      name: port-15004
  selector:
    app: ssv-node-v2-4
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-4
  name: ssv-node-v2-4
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-4
  template:
    metadata:
      labels:
        app: ssv-node-v2-4
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-v2-4
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12004
          name: port-12004
          protocol: UDP
          hostPort: 12004
        - containerPort: 13004
          name: port-13004
          hostPort: 13004
        - containerPort: 15004
          name: port-15004
          hostPort: 15004
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-4
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-4
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-v2-4
        persistentVolumeClaim:
          claimName: ssv-node-v2-4
      - name: ssv-cm-validator-options-4
        configMap:
          name: ssv-cm-validator-options-4
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
