.k8/yamls-stage/ssv-node-v2-5-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-5-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-5
spec:
  type: ClusterIP
  ports:
    - port: 12005
      protocol: UDP
      targetPort: 12005
      name: port-12005
    - port: 13005
      protocol: TCP
      targetPort: 13005
      name: port-13005
    - port: 15005
      protocol: TCP
      targetPort: 15005
      name: port-15005
  selector:
    app: ssv-node-v2-5
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-5
  name: ssv-node-v2-5
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-5
  template:
    metadata:
      labels:
        app: ssv-node-v2-5
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-v2-5
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: REPLACE_NODES_CPU_LIMIT
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12005
          name: port-12005
          protocol: UDP
          hostPort: 12005
        - containerPort: 13005
          name: port-13005
          hostPort: 13005
        - containerPort: 15005
          name: port-15005
          hostPort: 15005
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-5
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-5
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-v2-5
        persistentVolumeClaim:
          claimName: ssv-node-v2-5
      - name: ssv-cm-validator-options-5
        configMap:
          name: ssv-cm-validator-options-5
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
