.k8/yamls-stage/ssv-node-v2-7-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-7-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-7
spec:
  type: ClusterIP
  ports:
    - port: 12007
      protocol: UDP
      targetPort: 12007
      name: port-12007
    - port: 13007
      protocol: TCP
      targetPort: 13007
      name: port-13007
    - port: 15007
      protocol: TCP
      targetPort: 15007
      name: port-15007
  selector:
    app: ssv-node-v2-7
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-7
  name: ssv-node-v2-7
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-7
  template:
    metadata:
      labels:
        app: ssv-node-v2-7
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-v2-7
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 3000m
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12007
          name: port-12007
          protocol: UDP
          hostPort: 12007
        - containerPort: 13007
          name: port-13007
          hostPort: 13007
        - containerPort: 15007
          name: port-15007
          hostPort: 15007
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-7
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-7
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-v2-7
        persistentVolumeClaim:
          claimName: ssv-node-v2-7
      - name: ssv-cm-validator-options-7
        configMap:
          name: ssv-cm-validator-options-7
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
