.k8/yamls-stage/ssv-node-v2-8-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-node-v2-8-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-node-v2-8
spec:
  type: ClusterIP
  ports:
    - port: 12008
      protocol: UDP
      targetPort: 12008
      name: port-12008
    - port: 13008
      protocol: TCP
      targetPort: 13008
      name: port-13008
    - port: 15008
      protocol: TCP
      targetPort: 15008
      name: port-15008
  selector:
    app: ssv-node-v2-8
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-node-v2-8
  name: ssv-node-v2-8
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-node-v2-8
  template:
    metadata:
      labels:
        app: ssv-node-v2-8
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
      - name: ssv-node-v2-8
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 3000m
            memory: REPLACE_NODES_MEM_LIMIT
        command: ["make", "start-node"]
        ports:
        - containerPort: 12008
          name: port-12008
          protocol: UDP
          hostPort: 12008
        - containerPort: 13008
          name: port-13008
          hostPort: 13008
        - containerPort: 15008
          name: port-15008
          hostPort: 15008
        volumeMounts:
        - mountPath: /data
          name: ssv-node-v2-8
        - mountPath: /data/share.yaml
          subPath: share.yaml
          name: ssv-cm-validator-options-8
#      - name: ubuntu
#        image: REPLACE_HEALTH_IMAGE
#        imagePullPolicy: Always
#        args: [bash, -c, sleep infinity]
#        volumeMounts:
#        - name: ssv-nodes-health-check-cm
#          mountPath: /root/http-status.sh
#          subPath: http-status.sh
#        livenessProbe:
#          exec:
#            command:
#            - /bin/bash
#            - /root/http-status.sh
#          initialDelaySeconds: 120
#          periodSeconds: 60
      volumes:
      - name: ssv-node-v2-8
        persistentVolumeClaim:
          claimName: ssv-node-v2-8
      - name: ssv-cm-validator-options-8
        configMap:
          name: ssv-cm-validator-options-8
#      - name: ssv-nodes-health-check-cm
#        configMap:
#          name: ssv-nodes-health-check-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
