.k8/yamls-stage/boot-node-2-deployment.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boot-node-2
  namespace: REPLACE_NAMESPACE
spec:
  hosts:
  - "ssv.REPLACE_DOMAIN_SUFFIX"
  gateways:
  - boot-node-2
  http:
  - route:
    - destination:
        host: boot-node-2-svc
        port:
          number: 5001
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: boot-node-2
  namespace: REPLACE_NAMESPACE
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ssv.REPLACE_DOMAIN_SUFFIX"
---
apiVersion: v1
kind: Service
metadata:
  name: boot-node-2-svc
  namespace: REPLACE_NAMESPACE
  labels:
    app: boot-node-2
spec:
  type: ClusterIP
  ports:
    - port: 5679
      protocol: TCP
      targetPort: 5679
      name: port-5679
    - port: 4001
      protocol: UDP
      targetPort: 4001
      name: port-4001
    - port: 5001
      protocol: TCP
      targetPort: 5001
      name: port-5001
  selector:
    app: boot-node-2
---
apiVersion: REPLACE_API_VERSION 
kind: Deployment
metadata:
  labels:
    app: boot-node-2
  name: boot-node-2
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: boot-node-2
  template:
    metadata:
      labels:
        app: boot-node-2
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/role
                operator: In
                values:
                - ssv-boot-node-2
      containers:
      - name: boot-node-2
        image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG 
        imagePullPolicy: Always
        command: ["make", "start-boot-node"]
        ports:
        - containerPort: 5001
          name: port-5001      
          hostPort: 5001
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/role
        operator: Exists         
      hostNetwork: true
