.k8/yamls-stage/ssv-exporter.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ssv-exporter
  namespace: REPLACE_NAMESPACE
spec:
  hosts:
    - "ws-exporter.REPLACE_DOMAIN_SUFFIX"
  gateways:
    - ssv-exporter
  http:
    - route:
        - destination:
            host: ssv-exporter
            port:
              number: 14000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ssv-exporter
  namespace: REPLACE_NAMESPACE
spec:
  selector:
    istio: ingressgateway-int
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "ws-exporter.REPLACE_DOMAIN_SUFFIX"
---
apiVersion: v1
kind: Service
metadata:
  name: ssv-exporter
  namespace: REPLACE_NAMESPACE
  labels:
    app: ssv-exporter
spec:
  type: ClusterIP
  ports:
    - port: 12000
      protocol: UDP
      targetPort: 12000
      name: port-12000
    - port: 13000
      protocol: TCP
      targetPort: 13000
      name: port-13000
    - port: 14000
      protocol: TCP
      targetPort: 14000
      name: port-14000
    - port: 15000
      protocol: TCP
      targetPort: 15000
      name: port-15000
  selector:
    app: ssv-exporter
---
apiVersion: REPLACE_API_VERSION
kind: Deployment
metadata:
  labels:
    app: ssv-exporter
  name: ssv-exporter
  namespace: REPLACE_NAMESPACE
spec:
  replicas: REPLACE_REPLICAS
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssv-exporter
  template:
    metadata:
      labels:
        app: ssv-exporter
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/role
                    operator: In
                    values:
                      - ssv-main
      containers:
        - name: ssv-exporter
          image: REPLACE_DOCKER_REPO:REPLACE_IMAGETAG
          imagePullPolicy: Always
          resources:
            limits:
              cpu: REPLACE_EXPORTER_CPU_LIMIT
              memory: REPLACE_EXPORTER_MEM_LIMIT
          command: ["make", "start-node"]
          ports:
            - containerPort: 12000
              name: port-12000
              hostPort: 12000
              protocol: UDP
            - containerPort: 13000
              name: port-13000
              hostPort: 13000
            - containerPort: 14000
              name: port-14000
              hostPort: 14000
            - containerPort: 15000
              name: port-15000
              hostPort: 15000
          volumeMounts:
            - mountPath: /data
              name: ssv-exporter
            - mountPath: /data/share.yaml
              subPath: share.yaml
              name: ssv-exporter-cm
      volumes:
        - name: ssv-exporter
          persistentVolumeClaim:
            claimName: ssv-exporter
        - name: ssv-exporter-cm
          configMap:
            name: ssv-exporter-cm
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/role
          operator: Exists
      hostNetwork: true
